--- a/ui/stylesheets/csui/_details.scss
+++ b/ui/stylesheets/csui/_details.scss
@@ -20,13 +20,19 @@ $csui-tab-bg: lighten(#ccc, 15%);
 @mixin csui-tab {
     float: left;
     list-style: none;
-    padding: 15px 40px;
+    padding: 15px 30px;
     margin: 0px;
+    font-size: 12px;
+    font-weight: bold;
 
     a {
+        color: darken(#ccc, 25%);
+        text-decoration: none;
+        text-shadow: 0px 2px 1px white;
+
         &:hover {
             color: black;
-            text-decoration: none;
+            text-decoration: underline;
         }
     }
 }
